trocando de azul para vermelha

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        </tr>
        <tr>
         <td>Bermuda Jeans</td>
-        <td>Azul</td>
+        <td>Vermelha</td>
         <td>P</td>
         <td>R$160,00</td>
         <td>Em esgotado</td>
